--- a/LaTeX/einleitung.tex
+++ b/LaTeX/einleitung.tex
@@ -52,18 +52,20 @@ The infiltration time of the porous medium was formulated by Markicevic et al. i
 \begin{equation}\label{eq:InfTime}
 t_{in}=\kappa \cdotp {\frac{\mu \cdotp r{_0}^{1.85}}{\sigma \cos({\theta})\varPhi^{0.38}}}
 \end{equation}
-\newline
+
+\bigskip
+
 $t_{in}$ defines the infiltration time and depends on the parameters $\kappa$ , which is the permeability constant of the medium and $\mu$ the kinematic viscosity of the fluid. The initial drop radius is symbolized by $r_{0}$. $\theta$ stands for the initial contact angle after the impact of the droplet on the surface. The $\sigma$ in the denominator is the surface tension of the liquid. The higher the surface tension is the harder it is for the liquid to wet the surface of the material because of the increased contact angle and hardened impregnation capability. The last dependency of the infiltration time is  the $\phi$ constant for the material, identifying the porosity level of the material. \citep{markicevic2009infiltration}
 
 Stratov et al. have provided experimental results regarding  the spreading phases of silicon oil droplets utilizing capillary forces over different permeable layers and observing the diameters of the droplets and wetted areas over time. They have divided the depletion into two phases, of which the first one is defined by the time to reach the maximum diameter for the drop base and the second one is identified by the reduction of the drop base while the depletion takes place. The findings of the experiments show that the different oils on the different porous materials with similar porosity and mean pore dimensions. showed similar spreading characteristics on a different time scale and the contact angle remained constant throughout the second stage.\citep{starov2002thick}
 
 The dispersion behavior of liquid drops inside porous media which are previously saturated with the identical liquid are examined in the work of Starov et al. The study was conducted both theoretical and experimental perspectives. The spreading of a liquid on a dry solid medium is governed by a power law and it is shown that the same power law applies to the case with saturated medium. The liquid flow within the porous medium is modeled using the Brinkman’s equations. The effective lubrication and the liquid exchange between the drop and the porous medium are found to have equal significance through which the drop dispersion equation is generated. \citep{starov2002saturated}
-\newline
+\bigskip
 
 \begin{equation} \label{eq:SpreadingDia}
 L=L_0 (1+10(\frac{4}{\pi})^3 \frac{V^3 \gamma}{L_0^{10} \mu}\omega t)^{0.1}
 \end{equation}
-\newline
+\bigskip
 
 The formula \ref{eq:SpreadingDia} shows the parameters which define the diameter of the covered spot by a deployed drop on the saturated surface of the porous material. $L_0$ V are the measured initial diameter and volume of the drop. $\omega$ is defined as the effective lubrication coefficient and has to be acquired experimentally for each porous medium and impregnating liquid pair. The t as the last parameter of the equation stands for the time. 
 
@@ -73,19 +75,19 @@ The amount of time it takes for a drop to diffuse completely in the porous subst
 
 The fact that the parallel capillary pores assumption not being suitable for direct implementation for powder beds brings about a major disadvantage. To overcome this problem, the Kozeny approach, which utilizes an effective pore size based on the properties of the powder, is widely applied. The 3D velocity components of a Newtonian fluid were measured in the porous medium model under the assumption that the flow is steady, viscous and incompressible. Glass rods with diameters of 3mm were used for building the models of porous media. Two of the velocity components were measured with a laser Doppler anemometer while the  continuity equation is integrated to calculate the third component. The main aim was to observe how the viscous drag, inertial flow field and eddy losses in the porous medium affect the flow. The study revealed a laminar and stable  flow, which brings along the conclusion  that a micromixing of the fluid does not exist. In addition, high values of viscous drag coefficients lead to non-existent inertial flow effects.
 
-Although the vertical and lateral velocity fields are observed  to have positive and negative  flow fields, the bulk direction flow fields did not have negative velocity fields. At the top and bottom layers, the vertical flow is found to be absent, based on the fact that the vertical components of the velocities at the top and bottom layers being equal to zero. The fluid advancing in the porous medium via an indirect path should not lead to the  conclusion that there exists a fluid mixing, as it is observed to be absent for the examined range of Reynolds numbers.\citep{hapgood2002drop}
+Although the vertical and lateral velocity fields are observed  to have positive and negative  flow fields, the bulk direction flow fields do not have negative velocity fields. At the top and bottom layers, the vertical flow is found to be absent, based on the fact that the vertical components of the velocities at the top and bottom layers being equal to zero. The fluid advancing in the porous medium via an indirect path should not lead to the  conclusion that there exists a fluid mixing, as it is observed to be absent for the examined range of Reynolds numbers.\citep{hapgood2002drop}
 
 The diffusion of photons inside the porous medium on which the printing process is carried out, causes the Yule-Nielson effect. This effect is also referred to as optical dot gain and influences the half tone tonality significantly. Thus, it is essential that the Yule-Nielson effect is taken into account, when generating an accurate halftone reflectance model that predicts the halftone color.
 
 The photon diffusion within the porous medium causes the photons to exit the medium from a different spot than  where they  have entered. Estimating the absorption of light based only on the dot size might be inaccurate due to this phenomena. For instance, when a photon enters the medium from a spot that does  not contain ink and leave the medium from a spot that has ink, leading to higher absorption of light.
-An effective dot size which is greater than the actual dot size is used to compensate for this effect.
+An effective dot size which is greater than the actual dot size is used to compensate this effect.
 
-The halftone tonality is greatly affected by optical dot gain a phenomena caused by the photon diffusion inside the medium. The point spread function (PSF) is one of the ways to model the optical dot gain. The derivation of an appropriate PSF is accomplished through solving the radiative transfer equation, which leads to a PSF in terms of the scattering and absorption coefficients of the medium. This PSD is then used for calculating the average diffusion distance of the photons inside medium. It is shown in the work of Rogers that the Z-sum, which can be expressed explicitly, can be estimated by $\mu^{-s}$, where $\mu$ is the fractional ink coverage and s has values between 0 and 1.  The interrelationship  between the PSF  approach and the probability approach is proven to be strong. \citep{rogers2015point}
+The halftone tonality is greatly affected by optical dot gain a phenomena caused by the photon diffusion inside the medium. The point spread function (PSF) is one of the ways to model the optical dot gain. The derivation of an appropriate PSF is accomplished through solving the radiative transfer equation, which leads to a PSF in terms of the scattering and absorption coefficients of the medium. This PSF is then used for calculating the average diffusion distance of the photons inside medium. It is shown in the work of Rogers that the Z-sum, which can be expressed explicitly, can be estimated by $\mu^{-s}$, where $\mu$ is the fractional ink coverage and s has values between 0 and 1.  The interrelationship  between the PSF  approach and the probability approach is proven to be strong. \citep{rogers2015point}
 \section{Drop Deployment}
 
-In the book of Eric R Lee, the generation methods parameters and interacting parameters for microdrop generation is comprehensively explained highlighting the possible differences of the the outcomes, when different systems are utilized. The available technology for providing a drop on demand printing system rather than continuous jetting is to be summarized in the next section marking the advantages of each system comparatively.  
+In the book of Eric R Lee, the generation method's parameters and interacting parameters for microdrop generation is comprehensively explained highlighting the possible differences of the the outcomes, when different systems are utilized. The available technology for providing a drop on demand printing system rather than continuous jetting is to be summarized in the next section marking the advantages of each system comparatively.  
 
-The first method to consider is the thermal inkjet.  If the printing system is considered to be constructed of a nozzle at the bottom to let the generated drops accelerate absolutely vertically to the ground and an ink pool above the nozzle to provide a continuous ink supply during the printing process, a thin heating element can be placed between the nozzle and the ink pool. A high current flow for a fraction of a millisecond through the heating element causes an instantaneous temperature increase in the heating element, which consequently leads to evaporation of the liquid wetting the surface of the heater. The evaporation of the liquid in such a short period means an increase of the volume of the material resting just above the nozzle. This expansion causes the liquid waiting at the tip of the nozzle to be propelled out of the nozzle with the instantaneous pressure pulse. the reaction of the liquid under high temperature is to be taken into consideration.
+The first method to consider is the thermal inkjet.  If the printing system is considered to be constructed of a nozzle at the bottom to let the generated drops accelerate absolutely vertically to the ground and an ink pool above the nozzle to provide a continuous ink supply during the printing process, a thin heating element can be placed between the nozzle and the ink pool. A high current flow for a fraction of a millisecond through the heating element causes an instantaneous temperature increase in the heating element, which consequently leads to evaporation of the liquid wetting the surface of the heater. The evaporation of the liquid in such a short period means an increase of the volume of the material resting just above the nozzle. This expansion causes the liquid waiting at the tip of the nozzle to be propelled out of the nozzle with the instantaneous pressure pulse. The reaction of the liquid under high temperature is to be taken into consideration.
 
 Piezoelectric ceramics are an elite solution for pulse generation. Under electrical load the piezoelectric material shows elongation in a direction depending on the voltage sign and crystal structure orientation. A tube designed as the nozzle or as the reservoir above the nozzle ejects the fluid out of the nozzle when the diameter of the inner circle becomes smaller under load. Similarly a planer actuator placed above the nozzle feeds the fluid spontaneously in to the nozzle when the electrical loading causes a shear in the direction of the nozzle inside the crystal structure of the piezoceramic. Utilizing the planar actuators is a promising practice for parallel actuator designs for printing purposes.\citep{lee2002microdrop}
 
@@ -95,41 +97,42 @@ As a third possibility the electromagnetic actuators are a promising solution. A
 \chapter{State of the Technology}
 \label{sec:stand_technik}
 Even in the most contemporary dental laboratory of today's world, the coloring process is accomplished manually by an experienced dental technologist, who is following the guidelines prepared by the dental ink companies, which explain how a dental crown has to be colored sequentially using different colors on different areas of a single crown summarized in about 20 basic steps for anterior and posterior surfaces of the crowns separately\citep{idscad2016}. The application of the ink on the dental crown with brush strokes takes about 5 minutes for each tooth depending on the manual measurements of the ink application process conducted by a dental technologist from Zirkonzahn for educational purposes.
+
 In the Figure \ref{fig:lab_card} you can see a cutout of a lab card showing a section of the anterior teeth with markings. Dentists mark different areas of the crown with different labels referring to the colors from the guide, and send it  with an actual photo of the dental area of the patient under warm and cold light to the technician. So the technician can have a better feeling about the distribution.
-\newline
+\bigskip
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.5\textwidth]{grafiken/lab_card.png}
 			\caption{Cutout of a lab card \citep{sharpling2014}}
 	\label{fig:lab_card}
 \end{figure}
-\newline
+\bigskip
 The Figure \ref{fig:CrownProcesses} shows the sequential states of the dental crowns after each main process conducted by the dental technologist. First of all, the crowns have to be milled out of cylindrical blank which can provide enough bulk material for about 20 crowns. The milled crowns are colored via variety of brushes using  false colored inks to help the dental technician to visually differentiate the colored regions and the inks from each other, which do not possess their final color and have an extremely low contrast so that it is hard process for the human eye to recognize the borders of the different ink applied areas.
 
-
+\bigskip
 \begin{figure}[h]
 	\centering
 	\includegraphics[height=0.6\textwidth]{grafiken/CrownProcesses.jpg}
 	\caption{Making of dental implants \citep{zirkonzahn2018} }
 	\label{fig:CrownProcesses}
 \end{figure} 
- 
+ \bigskip
 
-Afterwards te colored dental crowns are sintered for the ceramic to reach its final strength. The false colors of the inks evaporate at temperatures above 1200\textdegree C and the metal-ionic ink becomes more visible providing the zirconia natural tooth like shade which roots from the depths of the ceramic structure. As a final process the crowns are masked and polished.
+Afterwards the colored dental crowns are sintered for the ceramic to reach its final strength. The false colors of the inks evaporate at temperatures above 1200\textdegree C and the metal-ionic ink becomes more visible providing the zirconia natural tooth like shade which roots from the depths of the ceramic structure. As a final process the crowns are masked and polished.
 
 
 
 \chapter{Review of the State of the Research and Technology}
 \label{sec:kritik_stand_technik}
-The second stage which is the coloring process is the part this thesis is focused on. The coloring process is a qualitative procedure. The amount of ink to apply on the dents and edges of the crown are described in measures of brush strokes. The literature or the technical documentation does not provide a quantitative approach about the required amount of ink. In Figure \ref{fig:false_colored} one can observe how cumbersome it is to accomplish the full colorization of a crown. More importantly,if the batch size is large an important problem surfaces. The sequential teeth have to comply with the natural ones already present in the application area or the ones colored before. The shading tolerances cannot be allowed to be too high, because of the uncommon irregularity of the teeth colors this situation would cause for the patient. 
-\newline
+The second stage ,the coloring process, is the part which this thesis is focused on. The coloring process is a qualitative procedure. The amount of ink to apply on the dents and edges of the crown are described in measures of brush strokes. The literature or the technical documentation does not provide a quantitative approach about the required amount of ink. In Figure \ref{fig:false_colored} one can observe how cumbersome it is to accomplish the full colorization of a crown. More importantly, if the batch size is large an important problem surfaces. The sequential teeth have to comply with the natural ones already present in the application area or the ones colored before. The shading tolerances cannot be allowed to be too high, because of the uncommon irregularity of the teeth colors this situation would cause.
+\bigskip
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.6\textwidth]{grafiken/false_colored.png}
 	\caption{False colored crowns after manual brushing \citep{zirkonzahn2018}}
 	\label{fig:false_colored}
 \end{figure}
-\newline
+\bigskip
 
 There are already devices to check the generated shade as a quality control measure. The proactive measure to control the shade to be generated is premixing the coloring agent with the brightener at the factory to guarantee that the zirconia will have the predefined color after the sinter if the zirconia is soaked in to the ink or the ink is applied on the surface until saturation is reached.
 For the printing process the amount of ink required for each shade, the time of depletion of the micro drops from the surface of the zirconia in the the porous structure and the size of the generated spot as well as the distribution of the ink depending on the radial distance from the center of the spot is of high interest.
